--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -3,5 +3,5 @@ body {
     padding: 0;
     box-sizing: border-box;
     overflow-x: hidden;
-    background-color: #DDE8EA;
+    background-color: #DCE8EA;
 }
