--- a/assets/css/section-asistencia/conteiner-asistencia.css
+++ b/assets/css/section-asistencia/conteiner-asistencia.css
@@ -1,5 +1,5 @@
 .conteiner-asistencia {
-    height: 900px;
+    height: 100vh;
     width: 100%;
     background-image: url(../../img/fondo-invierno.jpg);
     background-size: cover;
