--- a/assets/css/section-portada/cronometro-conteiner.css
+++ b/assets/css/section-portada/cronometro-conteiner.css
@@ -6,7 +6,7 @@
 .countdown{
     background-color: var(--color-primary);
     height: 120px;
-    width: 350px;
+    width: 300px;
     border: double 5px whitesmoke;
     border-radius: 20px;
     font-family: loubag;
@@ -14,7 +14,7 @@
     padding: 1px;
 }
 .countdown > p{
-    margin: 0;
+    margin: 0%;
     font-size: medium;
 }
 .countdown-conteiner{
