Cambio de estilo de botones

--- a/assets/css/section-asistencia/form-button.css
+++ b/assets/css/section-asistencia/form-button.css
@@ -35,7 +35,7 @@
     transition: 0.5s;
 }
 .btn-enviar:hover{
-    color: #606060;
+    color: #DCAB5C;
     border: double 4px #606060;
     background-color: whitesmoke;
     box-shadow: 4px 4px 0 #606060;
