--- a/assets/css/section-beneficios/regalos-conteiner.css
+++ b/assets/css/section-beneficios/regalos-conteiner.css
@@ -32,6 +32,7 @@
     background-color: whitesmoke;
     font-family: loubag;
     color: #606060;
+    box-shadow: 4px 4px 0 #606060;
 }
 
 .regalos-conteiner p{
@@ -45,5 +46,5 @@
     cursor: pointer;
     font-size: small;
     border: double 4px #606060;
-    box-shadow: 4px 4px 0 #606060;
+    box-shadow: none;
 }
