--- a/assets/css/section-asistencia/form-button.css
+++ b/assets/css/section-asistencia/form-button.css
@@ -6,7 +6,7 @@
     margin-top: 30px;
     width: 150px;
     height: 40px;
-    border: double 3px #606060;
+    border: none;
     border-radius: 15px;
     background-color: whitesmoke;
     position: relative;
